--- a/citas.html
+++ b/citas.html
@@ -163,7 +163,7 @@
                 <a href="index.html#blog">Blog</a>
                 <a href="index.html#resenias">Reseñas</a>
                 <a href="index.html#suscribirse">Suscribete</a>
-                <a href="index.html#contacto">Contacto</a>
+                <a href="contacto.html">Contacto</a>
             </div>
         </div>
     </nav>
