--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="#blog">Blog</a>
                 <a href="#resenias">Reseñas</a>
                 <a href="#suscribirse">Suscribete</a>
-                <a href="#contacto">Contacto</a>
+                <a href="contacto.html">Contacto</a>
             </div>
         </div>
     </nav>
@@ -162,7 +162,7 @@
                 </div>
                 <div class="footer-section">
                     <h4 id="contacto">Contacto</h4>
-                    <p>📍 Calle Principal 123</p>
+                    <p>📍 C/ dels Sants Just i Pastor, 70, 46940 Manises, València</p>
                     <p>📞 +34 123 456 789</p>
                     <p>✉️ info@MASK!OTAS.com</p>
                 </div>
