Modificada la redireccion de la nav-bar a la pagina de reserva

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="nav-links">
                 <a href="#">Inicio</a>
                 <a href="#servicios">Servicios</a>
-                <a href="#citas">Reservar Cita</a>
+                <a href="citas.html">Reservar Cita</a>
                 <a href="#blog">Blog</a>
                 <a href="#resenias">Reseñas</a>
                 <a href="#suscribirse">Suscribete</a>
