--- a/contacto.html
+++ b/contacto.html
@@ -53,6 +53,9 @@
         .logo span {
             font-size: 1.25rem;
             font-weight: bold;
+            text-decoration: inherit;
+            color: white;
+            text-decoration-color: #009688;
         }
 
         .nav-links {
@@ -140,7 +143,7 @@
         <div class="nav-container">
             <div class="logo">
                 <i class="fas fa-paw"></i>
-                <span>MASK!OTAS</span>
+                <a href="index.html"><span>MASK!OTAS</span></a>
             </div>
             <div class="nav-links">
                 <a href="index.html">Inicio</a>
@@ -149,7 +152,7 @@
                 <a href="index.html#blog">Blog</a>
                 <a href="index.html#resenias">Reseñas</a>
                 <a href="index.html#suscribirse">Suscríbete</a>
-                <a href="index.html#contacto">Contacto</a>
+                <a href="contacto.html">Contacto</a>
             </div>
         </div>
     </nav>
