añadida una review para que no se quede el espacio ese en blanco a la derecha.

--- a/index.html
+++ b/index.html
@@ -128,6 +128,16 @@
                     </div>
                     <p>"Excelente!!, mi gato Tobias está super contento por haber sido capado . ¡Super recomendado!"</p>
                 </div>
+                <div class="testimonial-card">
+                    <div class="testimonial-header">
+                        <img src="imagenes/reseña.png" alt="Cliente">
+                        <div>
+                            <h4>Laura Trillo</h4>
+                            <div class="rating">★★★★★</div>
+                        </div>
+                    </div>
+                    <p>"Estoy super contenta de haber llevado a mi mascota a Mask!otas, son todos muy profesionales y muy amables. ¡Gracias por todo!"</p>
+                </div>
             </div>
         </div>
     </section>
