--- a/contacto.html
+++ b/contacto.html
@@ -97,7 +97,7 @@
             color: #333;
         }
         .contact-form input, .contact-form textarea {
-            width: 100%;
+            width: 97%;
             padding: 10px;
             margin-top: 5px;
             border: 1px solid #ccc;
@@ -106,14 +106,14 @@
         .contact-form button {
             margin-top: 15px;
             padding: 10px 20px;
-            background-color: #4CAF50;
+            background-color: #009688;
             color: #fff;
             border: none;
             border-radius: 4px;
             cursor: pointer;
         }
         .contact-form button:hover {
-            background-color: #45a049;
+            background-color: #00554c;
         }
 
         /* Store Locator */
