--- a/contacto.html
+++ b/contacto.html
@@ -169,11 +169,11 @@
             </div>
             <div id="menu-nav" class="nav-links">
                 <a href="index.html">Inicio</a>
-                <a href="#servicios">Servicios</a>
+                <a href="index.html#servicios">Servicios</a>
                 <a href="citas.html">Reservar Cita</a>
-                <a href="#blog">Blog</a>
-                <a href="#resenias">Reseñas</a>
-                <a href="#suscribirse">Suscríbete</a>
+                <a href="index.html#blog">Blog</a>
+                <a href="index.html#resenias">Reseñas</a>
+                <a href="index.html#suscribirse">Suscríbete</a>
                 <a href="contacto.html">Contacto</a>
             </div>
             <div class="menu-icon">
