Creada pagina de agradecimiento por suscribirse a la newsletter

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <div class="newsletter-form">
                 <form>
                     <input type="email" placeholder="Tu correo electrónico">
-                    <button>Suscribirse</button>
+                    <a href="gracias.html">Suscribirse</a>
                 </form>
             </div>
         </div>
