problema boton newsletter

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <div class="newsletter-form">
                 <form>
                     <input type="email" placeholder="Tu correo electrónico">
-                    <a href="gracias.html">Suscribirse</a>
+                    <a href="gracias.html"><button>Suscribirse</button></a>
                 </form>
             </div>
         </div>
