Agregado relink a pagina de gracias en la home.

--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
             <h2>Mantente informado</h2>
             <p>Recibe consejos y promociones exclusivas para el cuidado de tu mascota</p>
             <div class="newsletter-form">
-                <form>
+                <form action="gracias.html">
                     <input type="email" placeholder="Tu correo electrónico">
-                    <a href="gracias.html"><button>Suscribirse</button></a>
+                    <button>Suscribirse</button>
                 </form>
             </div>
         </div>
