Añadido el mismo tamaño de texto al resto de paginas.

--- a/citas.html
+++ b/citas.html
@@ -54,6 +54,8 @@
         .nav-links {
             display: flex;
             gap: 1rem;
+            font-size: larger;
+            padding: 5px;
         }
 
         .menu-icon .hamburguesa {
