--- a/contacto.html
+++ b/contacto.html
@@ -58,8 +58,10 @@
 
         /* Estilos para enlaces de navegación */
         .nav-links {
-            display: flex;
-            gap: 1rem;
+        display: flex;
+        gap: 1rem;
+        font-size: larger;
+        padding: 5px;
         }
 
         .menu-icon .hamburguesa {
