--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="blog-content">
                         <h3>Cuidados básicos para tu cachorro</h3>
                         <p>Aprende los aspectos fundamentales para el cuidado de tu nuevo amigo.</p>
-                        <a href="#">Leer más →</a>
+                        <a href="cuidados.html">Leer más →</a>
                     </div>
                 </article>
                 <article class="blog-card">
