modificado nombre del video, may-minusculas.

--- a/cuidados.html
+++ b/cuidados.html
@@ -223,7 +223,7 @@ img {
     <section id="citas" class="hero">
         <div class="video-background">
             <video autoplay="" muted="" loop="">
-                <source src="videos/Cuidados.mp4" type="video/mp4">
+                <source src="videos/cuidados.mp4" type="video/mp4">
             </video>
             <div class="overlay"></div>
         </div>
