arreglado espacio menu hamburguesa en responsive

--- a/contacto.html
+++ b/contacto.html
@@ -75,11 +75,12 @@
             .nav-links {
                 display: none;
                 flex-direction: column;
-                background-color: #00695C;
+                background-color: #009688;
                 width: 100%;
                 position: absolute;
                 top: 60px;
                 left: 0;
+                padding: 0.5rem;
             }
 
             .nav-links.responsive {
