--- a/cuidados.html
+++ b/cuidados.html
@@ -48,7 +48,9 @@ nav {
 .nav-links {
     display: flex;
     gap: 1rem;
-}
+    font-size: larger;
+    padding: 5px;
+    }
 
 .menu-icon .hamburguesa {
     display: none;
@@ -118,64 +120,6 @@ img {
     height: auto;
     width: 100%;
     display: block;
-}
-
-.blog {
-    display: flex;
-    gap: 2cm;
-    justify-content: center;
-    margin-top: 2em;
-    flex-wrap: wrap;
-}
-
-.blog-card {
-    background-color: white;
-    color: black;
-    width: 100%;
-    max-width: 300px;
-    border-radius: 8px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-    overflow: hidden;
-    text-align: left;
-    transition: transform 0.2s ease-in-out;
-    margin: 1em;
-}
-
-.blog-card:hover {
-    transform: translateY(-5px);
-}
-
-.blog-card img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-}
-
-.blog-content {
-    padding: 15px;
-}
-
-.blog-content h3 {
-    font-size: 1.2em;
-    margin: 0;
-    color: #00695C;
-}
-
-.blog-content p {
-    font-size: 0.9em;
-    margin: 10px 0;
-    color: #555;
-}
-
-.blog-content a {
-    color: #009688;
-    font-weight: bold;
-    text-decoration: none;
-    font-size: 0.9em;
-}
-
-.blog-content a:hover {
-    text-decoration: underline;
 }
 
 .hero {
