Tamaño espaciado texto pagina Cuidados

--- a/cuidados.html
+++ b/cuidados.html
@@ -49,6 +49,7 @@ nav {
     display: flex;
     gap: 1rem;
     font-size: larger;
+    padding: 5px;
     }
 
 .menu-icon .hamburguesa {
@@ -70,7 +71,6 @@ nav {
     }
 
     .nav-links a {
-        padding: 0.5rem;
         text-align: center;
         display: block;
         color: white;
@@ -90,7 +90,7 @@ nav {
 
 body {
     font-family: Arial, sans-serif;
-    line-height: 1.6;
+    line-height: 1.3;
     margin-top: 60px; /* Separar el contenido de la barra de navegación */
 }
 
