--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <div id="menu-nav" class="nav-links">
                 <a href="#">Inicio</a>
-                <a href="#servicios">Servicios</a>
+                <a href="servicios.html">Servicios</a>
                 <a href="citas.html">Reservar Cita</a>
                 <a href="#blog">Blog</a>
                 <a href="#resenias">Reseñas</a>
