--- a/servicios.html
+++ b/servicios.html
@@ -269,27 +269,27 @@
         <div class="service-card">
             <h2>Revisiones completas y seguimiento personalizado para tu mascota</h2>
             <p>Ofrecemos revisiones completas y un seguimiento personalizado para asegurar la salud y el bienestar de tu mascota. Nuestro equipo está dedicado a detectar cualquier problema de salud a tiempo y a proporcionar las mejores recomendaciones para su cuidado continuo.</p>
-            <img src="https://via.placeholder.com/800x400?text=Consulta+Veterinaria" alt="Imagen de consulta veterinaria">
+            <img src="imagenes/revision_servicio.jpg" alt="Revisiones completas y seguimiento personalizado">
         </div>
 
         <div class="service-card">
             <h2>Cuidados Específicos</h2>
             <p>Realizamos chequeos específicos según las necesidades de cada mascota, incluyendo exámenes físicos, pruebas de laboratorio, y consultas de comportamiento.</p>
-            <img src="https://via.placeholder.com/800x400?text=Chequeo+Veterinario" alt="Imagen de chequeo veterinario">
+            <img src="imagenes/cuidados_servicio.jpg" alt="Cuidados específicos">
         </div>
 
         <!-- Servicio de Vacunación -->
         <div class="service-card">
             <h2>Vacunación</h2>
             <p>Mantén a tu mascota protegida contra enfermedades con nuestro programa de vacunación. Ofrecemos todas las vacunas necesarias para cachorros, adultos y mascotas mayores.</p>
-            <img src="https://via.placeholder.com/800x400?text=Vacunación+para+Mascotas" alt="Vacunación para mascotas">
+            <img src="imagenes/vacunacion_servicio.jpg" alt="Vacunación para mascotas">
         </div>
 
         <!-- Servicio de Peluquería -->
         <div class="service-card">
             <h2>Peluquería</h2>
             <p>¡Tu mascota merece lucir genial! Nuestro servicio de peluquería incluye corte de pelo, baño y cuidados especiales para cada tipo de pelaje, ayudando a tu mascota a verse y sentirse bien.</p>
-            <img src="https://via.placeholder.com/800x400?text=Peluquería+para+Mascotas" alt="Peluquería para mascotas">
+            <img src="imagenes/pelu_servicio.jpg" alt="Peluquería para mascotas">
         </div>
     </div>
 
