--- a/cuidados.html
+++ b/cuidados.html
@@ -147,7 +147,7 @@ img {
             </div>
             <div id="menu-nav" class="nav-links">
                 <a href="index.html">Inicio</a>
-                <a href="index.html#servicios">Servicios</a>
+                <a href="servicios.html">Servicios</a>
                 <a href="citas.html">Reservar Cita</a>
                 <a href="index.html#blog">Blog</a>
                 <a href="index.html#resenias">Reseñas</a>
