Añadidos links a las cards de la Home.

--- a/index.html
+++ b/index.html
@@ -56,21 +56,27 @@
         <div class="container">
             <h2>Nuestros Servicios</h2>
             <div class="services-grid">
-                <div class="service-card">
-                    <i class="fas fa-heartbeat"></i>
-                    <h3>Consultas y Chequeos</h3>
-                    <p>Revisiones completas y seguimiento personalizado para tu mascota.</p>
-                </div>
-                <div class="service-card">
-                    <i class="fas fa-syringe"></i>
-                    <h3>Vacunación</h3>
-                    <p>Mantén a tu mascota protegida con nuestro programa de vacunación.</p>
-                </div>
-                <div class="service-card">
-                    <i class="fas fa-cut"></i>
-                    <h3>Peluquería</h3>
-                    <p>Servicios de grooming profesional para mantener a tu mascota hermosa.</p>
-                </div>
+                <a href="servicios.html#revision" class="no-link">
+                    <div class="service-card">
+                        <i class="fas fa-heartbeat"></i>
+                        <h3>Consultas y Chequeos</h3>
+                        <p>Revisiones completas y seguimiento personalizado para tu mascota.</p>
+                    </div>
+                </a>
+                <a href="servicios.html#vacunacion" class="no-link">
+                    <div class="service-card">
+                        <i class="fas fa-syringe"></i>
+                        <h3>Vacunación</h3>
+                        <p>Mantén a tu mascota protegida con nuestro programa de vacunación.</p>
+                    </div>
+                </a>
+                <a href="servicios.html#peluqueria" class="no-link">
+                    <div class="service-card">
+                        <i class="fas fa-cut"></i>
+                        <h3>Peluquería</h3>
+                        <p>Servicios de grooming profesional para mantener a tu mascota hermosa.</p>
+                    </div>
+                </a>
             </div>
         </div>
     </section>
