añadido relink a nutricion en home

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <div class="blog-content">
                         <h3>Guía de nutrición para mascotas</h3>
                         <p>Descubre la mejor alimentación para cada etapa de vida.</p>
-                        <a href="#">Leer más →</a>
+                        <a href="nutricion.html">Leer más →</a>
                     </div>
                 </article>
                 <article class="blog-card">
@@ -107,7 +107,7 @@
                     <div class="blog-content">
                         <h3>Ejercicios recomendados</h3>
                         <p>Mantén a tu mascota activa y saludable con estos ejercicios.</p>
-                        <a href="#">Leer más →</a>
+                        <a href="ejercicio.html">Leer más →</a>
                     </div>
                 </article>
             </div>
