cambio imagen pagina Nutricion

--- a/nutricion.html
+++ b/nutricion.html
@@ -118,6 +118,7 @@ img {
     height: auto;
     width: 100%;
     display: block;
+    text-align: center;
 }
 
 .hero {
@@ -194,7 +195,7 @@ img {
         <h2>3. Control de porciones y horarios:</h2>
         La cantidad de alimento que una mascota necesita depende de su tamaño y actividad física. Controlar las porciones y establecer horarios regulares de alimentación previene problemas como la obesidad y el sobrepeso, que son comunes en mascotas. Mantener un horario regular también ayuda a la mascota a establecer rutinas saludables, mejorar su digestión y reducir el riesgo de problemas gastrointestinales.</p>
 
-        <img src="imagenes/nutricion2.jpg" alt="">
+        <img src="imagenes/nutricion2_2.jpg" alt="">
 
         <h2>4. Hidratación:</h2>
         El agua es esencial para la salud de las mascotas, ya que ayuda en la digestión, la eliminación de toxinas y el equilibrio de temperatura corporal. Asegurarse de que tengan acceso a agua fresca en todo momento es tan importante como una buena alimentación. La hidratación adecuada también contribuye al buen funcionamiento de sus órganos y a mantener un pelaje y piel saludables, especialmente en días calurosos o después de actividad física intensa.</p>
