añadido link a ejercicion en la Home

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <div class="blog-content">
                         <h3>Ejercicios recomendados</h3>
                         <p>Mantén a tu mascota activa y saludable con estos ejercicios.</p>
-                        <a href="ejercicio.html">Leer más →</a>
+                        <a href="ejercicios.html">Leer más →</a>
                     </div>
                 </article>
             </div>
