--- a/citas.html
+++ b/citas.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cita Previa</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script type="text/javascript" src="scripts/index.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -196,7 +197,7 @@
                 <a href="contacto.html">Contacto</a>
             </div>
             <div class="menu-icon">
-                <a href="javascript:void(0);" class="hamburguesa" onclick="myFunction()">
+                <a href="javascript:void(0);" class="hamburguesa" onclick="abrirMenuMovil()">
                     <i class="fa fa-bars"></i>
                 </a>
             </div>
@@ -257,11 +258,6 @@
     </div>
 
     <script>
-        function myFunction() {
-            var x = document.getElementById("menu-nav");
-            x.classList.toggle("responsive");
-        }
-
         const days = document.querySelectorAll('.day');
         days.forEach(day => {
             day.addEventListener('click', () => {
