--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto - MASK!OTAS</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script type="text/javascript" src="scripts/index.js"></script>
     <style>
         /* Estilos generales */
         body {
@@ -180,7 +182,7 @@
                 <a href="contacto.html">Contacto</a>
             </div>
             <div class="menu-icon">
-                <a href="javascript:void(0);" class="hamburguesa" onclick="myFunction()">
+                <a href="javascript:void(0);" class="hamburguesa" onclick="abrirMenuMovil()">
                     <i class="fa fa-bars"></i>
                 </a>
             </div>
@@ -223,11 +225,45 @@
             </div>
         </div>
     </div>
-    <script>
-        function myFunction() {
-            var x = document.getElementById("menu-nav");
-            x.classList.toggle("responsive");
-        }
-    </script>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="footer-grid">
+                <div class="footer-section">
+                    <h3>MASK!OTAS</h3>
+                    <p>Cuidando a tus mascotas con amor y profesionalismo desde 2024.</p>
+                </div>
+                <div class="footer-section">
+                    <h4>Horario</h4>
+                    <p>Lunes - Viernes: 9:00 - 20:00</p>
+                    <p>Sábados: 10:00 - 15:00</p>
+                    <p>Domingos: Emergencias</p>
+                </div>
+                <div class="footer-section">
+                    <h4 id="contacto">Contacto</h4>
+                    <p>📍 C/ dels Sants Just i Pastor, 70, 46940 Manises, València</p>
+                    <p>📞 +34 123 456 789</p>
+                    <p>✉️ info@MASK!OTAS.com</p>
+                </div>
+                <div class="footer-section">
+                    <h4>Síguenos</h4>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                    </div>
+                </div>
+                <div class="footer-section">
+                    <h4>Información</h4>
+                    <div class="legal-links">
+                        <p><a href="legal.html#privacidad">Privacidad</a></p>
+                        <p><a href="legal.html#legal">Legal</a></p>
+                        <p><a href="legal.html#cookies">Cookies</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
