--- a/ejercicios.html
+++ b/ejercicios.html
@@ -6,6 +6,7 @@
     <title>Ejercicios</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script type="text/javascript" src="scripts/index.js"></script>
     <style>
     /* Estilos generales */
         body {
@@ -408,7 +409,7 @@
                 <a href="contacto.html">Contacto</a>
             </div>
             <div class="menu-icon">
-                <a href="javascript:void(0);" class="hamburguesa" onclick="myFunction()">
+                <a href="javascript:void(0);" class="hamburguesa" onclick="abrirMenuMovil()">
                 <i class="fa fa-bars"></i>
                 </a>
             </div>
@@ -424,7 +425,7 @@
         <div class="hero-container">
             <div class="hero-content">
                 <h1>Ejercicios recomendados</h1>
-                <p>Primera consulta gratuita para nuevos pacientes</p>
+                <!-- <p>Primera consulta gratuita para nuevos pacientes</p> -->
             </div>
         </div>
     </section>
@@ -569,24 +570,13 @@
                     <div class="footer-section">
                         <h4>Información</h4>
                         <div class="legal-links">
-                            <p><a href="#">Privacidad</a></p>
-                            <p><a href="#">Legal</a></p>
-                            <p><a href="#">Cookies</a></p>
+                            <p><a href="legal.html#privacidad">Privacidad</a></p>
+                            <p><a href="legal.html#legal">Legal</a></p>
+                            <p><a href="legal.html#cookies">Cookies</a></p>
                         </div>
                     </div>
                 </div>
             </div>
         </footer>
-    
-        <script>
-            function myFunction() {
-                var x = document.getElementById("menu-nav");
-                if (x.className === "nav-links") {
-                x.className += " responsive";
-                } else {
-                x.className = "nav-links";
-                }
-            }
-        </script>
 </body>
 </html>
