--- a/nutricion.html
+++ b/nutricion.html
@@ -6,6 +6,7 @@
     <title>MASK!OTAS - Clínica Veterinaria</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script type="text/javascript" src="scripts/index.js"></script>
 </head>
 
 <style>
@@ -156,7 +157,7 @@ img {
                 <a href="contacto.html">Contacto</a>
             </div>
             <div class="menu-icon">
-                <a href="javascript:void(0);" class="hamburguesa" onclick="myFunction()">
+                <a href="javascript:void(0);" class="hamburguesa" onclick="abrirMenuMovil()">
                     <i class="fa fa-bars"></i>
                 </a>
             </div>
@@ -234,20 +235,13 @@ img {
                 <div class="footer-section">
                     <h4>Información</h4>
                     <div class="legal-links">
-                        <p><a href="#">Privacidad</a></p>
-                        <p><a href="#">Legal</a></p>
-                        <p><a href="#">Cookies</a></p>
+                        <p><a href="legal.html#privacidad">Privacidad</a></p>
+                        <p><a href="legal.html#legal">Legal</a></p>
+                        <p><a href="legal.html#cookies">Cookies</a></p>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
-
-    <script>
-        function myFunction() {
-            var x = document.getElementById("menu-nav");
-            x.classList.toggle("responsive");
-        }
-    </script>
 </body>
 </html>
