--- a/plantilla.html
+++ b/plantilla.html
@@ -6,6 +6,7 @@
     <title>MASK!OTAS - Clínica Veterinaria</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script type="text/javascript" src="scripts/index.js"></script>
 </head>
 
 <style>
@@ -84,7 +85,7 @@ nav {
                 <a href="contacto.html">Contacto</a>
             </div>
             <div class="menu-icon">
-                <a href="javascript:void(0);" class="hamburguesa" onclick="myFunction()">
+                <a href="javascript:void(0);" class="hamburguesa" onclick="abrirMenuMovil()">
                 <i class="fa fa-bars"></i>
                 </a>
             </div>
@@ -96,24 +97,45 @@ nav {
 
 
 
-
-
-
-
-
-
-
-
-    <script>
-        function myFunction() {
-            var x = document.getElementById("menu-nav");
-            if (x.className === "nav-links") {
-            x.className += " responsive";
-            } else {
-            x.className = "nav-links";
-            }
-        }
-    </script>
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="footer-grid">
+                <div class="footer-section">
+                    <h3>MASK!OTAS</h3>
+                    <p>Cuidando a tus mascotas con amor y profesionalismo desde 2024.</p>
+                </div>
+                <div class="footer-section">
+                    <h4>Horario</h4>
+                    <p>Lunes - Viernes: 9:00 - 20:00</p>
+                    <p>Sábados: 10:00 - 15:00</p>
+                    <p>Domingos: Emergencias</p>
+                </div>
+                <div class="footer-section">
+                    <h4 id="contacto">Contacto</h4>
+                    <p>📍 C/ dels Sants Just i Pastor, 70, 46940 Manises, València</p>
+                    <p>📞 +34 123 456 789</p>
+                    <p>✉️ info@MASK!OTAS.com</p>
+                </div>
+                <div class="footer-section">
+                    <h4>Síguenos</h4>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                    </div>
+                </div>
+                <div class="footer-section">
+                    <h4>Información</h4>
+                    <div class="legal-links">
+                        <p><a id="privacidad" href="legal.html#privacidad">Privacidad</a></p>
+                        <p><a id="legal" href="legal.html#legal">Legal</a></p>
+                        <p><a id="cookies" href="legal.html#cookies">Cookies</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
 
